--- a/philo_one/Makefile
+++ b/philo_one/Makefile
@@ -6,13 +6,13 @@
 #    By: iwillens <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/06/10 17:45:43 by iwillens          #+#    #+#              #
-#    Updated: 2020/06/18 12:28:23 by iwillens         ###   ########.fr        #
+#    Updated: 2020/06/21 15:05:12 by iwillens         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = philo_one
 CC = clang
-CCFLAGS = -Wall -Wextra -Werror -g -Wno-nullability-completeness
+CCFLAGS = -Wall -Wextra -Werror
 
 OBJ_DIR= ./build
 SRC_DIR= ./
@@ -38,7 +38,7 @@ OBJS = $(patsubst $(SRC_DIR)/%.c, $(OBJ_DIR)/%.o, $(SRCS))
 all : $(NAME)
 
 $(NAME): $(OBJS) $(HEADERS)
-	$(CC) $(CCFLAGS) $(OBJS) -lpthread -o $@
+	$(CC) $(CCFLAGS) $(OBJS) -o $@
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c $(HEADERS)
 	mkdir -p ./build
